hphp/test/slow/php7_backported/ns_088.php.expectf

Fatal error: No code may exist outside of namespace {} in %s/ns_088.php on line 10
